--- a/main.html
+++ b/main.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <title>Time and Space Complexity</title>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <h1>Understanding Time, Space, and Complexity</h1>
+    <p>Time complexity is a measure of how the execution time of an algorithm increases as the input size grows. An efficient algorithm is one that performs its task quickly, regardless of the input's size. Efficient algorithms aim to minimize the time it takes to complete a task, allowing for better performance.</p>
+    <p>Space complexity, on the other hand, focuses on the amount of memory an algorithm uses in relation to the input size. It helps us understand how much memory an algorithm requires to perform its task. Space complexity is often expressed using Big O notation, like O(n), where 'n' represents the input size. An algorithm with low space complexity is memory-efficient and suitable for scenarios with limited memory resources. <b>Space Complexity</b> is a critical consideration in designing algorithms for various applications.</p>
 </body>
 
 </html>
